make-a-wish-salesforce/src/objects/CRMfusionDBR101__Potential_Duplicate__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Contact_Display_Field__c</fullName>
        <description>This field is used internally to generate the &quot;Duplicate Record&quot; field.  It generates display text for a contact including the full name linked to the contact and the account name (if there is one) linked to the account.</description>
        <formula>HYPERLINK( &apos;/&apos; &amp; CRMfusionDBR101__Contact__c, CRMfusionDBR101__Contact__r.FirstName &amp; IF( NOT( ISBLANK( CRMfusionDBR101__Contact__r.FirstName ) ), &apos; &apos;, &apos;&apos; ) &amp; CRMfusionDBR101__Contact__r.LastName, &apos;_self&apos;) &amp; IF( AND( NOT( ISBLANK( CRMfusionDBR101__Contact__r.AccountId ) ), NOT( ISNULL( CRMfusionDBR101__Contact__r.AccountId ) ) ), &apos; at &apos; &amp; HYPERLINK( &apos;/&apos; &amp; CRMfusionDBR101__Contact__r.AccountId, CRMfusionDBR101__Contact__r.Account.Name, &apos;_self&apos; ), &apos;&apos; )</formula>
        <inlineHelpText>The full name and account name of the potential duplicate contact.</inlineHelpText>
        <label>Contact Display Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Duplicate_Record__c</fullName>
        <description>This formula displays text based on the type of object this potential duplicate record is linked to.  It utilized the Contact Display Field, Lead Display Field and Account field as needed.</description>
        <formula>CASE(  CRMfusionDBR101__Object_Type__c, &apos;Account&apos;, HYPERLINK( &apos;/&apos; &amp; CRMfusionDBR101__Account__c, CRMfusionDBR101__Account__r.Name, &apos;_self&apos; ), &apos;Contact&apos;,  CRMfusionDBR101__Contact_Display_Field__c , &apos;Lead&apos;, CRMfusionDBR101__Lead_Display_Field__c, HYPERLINK( &apos;/&apos; &amp;  CRMfusionDBR101__Generic_Object__c, CRMfusionDBR101__Generic_Display_Field__c, &apos;_self&apos; ) )</formula>
        <label>Duplicate Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Duplicate_Warning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Warning</label>
        <referenceTo>CRMfusionDBR101__Duplicate_Warning__c</referenceTo>
        <relationshipLabel>DupeBlocker Potential Duplicates</relationshipLabel>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Email__c</fullName>
        <formula>CASE(  CRMfusionDBR101__Object_Type__c, &apos;Contact&apos;,  CRMfusionDBR101__Contact__r.Email, &apos;Lead&apos;,  CRMfusionDBR101__Lead__r.Email, &apos;&apos; )</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Generic_Display_Field__c</fullName>
        <label>Generic Display Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Generic_Object__c</fullName>
        <description>ID of any object in the system which a potential duplicate record is linked to.</description>
        <externalId>true</externalId>
        <label>Generic Object</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Lead_Display_Field__c</fullName>
        <description>This field is used internally to generate the &quot;Duplicate Record&quot; field.  It generates display text for a lead including the full name and the company name (if there is one) linked to the lead.</description>
        <formula>HYPERLINK( &apos;/&apos; &amp;  CRMfusionDBR101__Lead__c,  CRMfusionDBR101__Lead__r.FirstName &amp; IF( NOT( ISBLANK( CRMfusionDBR101__Lead__r.FirstName ) ), &apos; &apos;, &apos;&apos; ) &amp; CRMfusionDBR101__Lead__r.LastName &amp; IF( NOT( ISBLANK( CRMfusionDBR101__Lead__r.Company ) ), &apos; at &apos; &amp; CRMfusionDBR101__Lead__r.Company, &apos;&apos; ), &apos;_self&apos; )</formula>
        <inlineHelpText>The full name and company name of the potential duplicate lead.</inlineHelpText>
        <label>Lead Display Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Object_Type__c</fullName>
        <description>This field displays whether the associated potential duplicate is an Account, Contact or Lead.</description>
        <formula>IF( AND( NOT( ISNULL( CRMfusionDBR101__Account__c ) ), NOT( ISBLANK( CRMfusionDBR101__Account__c ) ) ), &apos;Account&apos;, IF(  AND( NOT( ISNULL( CRMfusionDBR101__Contact__c ) ), NOT( ISBLANK( CRMfusionDBR101__Contact__c ) ) ), &apos;Contact&apos;, IF( AND( NOT( ISNULL( CRMfusionDBR101__Lead__c ) ), NOT( ISBLANK( CRMfusionDBR101__Lead__c ) ) ), &apos;Lead&apos;,  TEXT(CRMfusionDBR101__Scenario_Type__c) ) ) )</formula>
        <inlineHelpText>This field displays whether the associated potential duplicate is an Account, Contact or Lead.</inlineHelpText>
        <label>Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Phone__c</fullName>
        <formula>CASE(  CRMfusionDBR101__Object_Type__c, &apos;Account&apos;,  CRMfusionDBR101__Account__r.Phone, &apos;Contact&apos;,  CRMfusionDBR101__Contact__r.Phone, &apos;Lead&apos;,  CRMfusionDBR101__Lead__r.Phone, &apos;&apos; )</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Type__c</fullName>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Lead to Contact</fullName>
                </value>
                <value>
                    <fullName>Lead to Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__WarningId_ObjectId__c</fullName>
        <externalId>true</externalId>
        <label>Warning/Object Link</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DupeBlocker Potential Duplicate</label>
    <nameField>
        <displayFormat>Dupe: {0}</displayFormat>
        <label>Duplicate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Potential Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>